fix route for register, login, backend routing

--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -7,10 +7,6 @@
         Angular Recipe App
       </a>
     </h1>
-
-    <a class="text-black hover:text-orange md:hidden" href="#">
-      <i class="fa fa-2x fa-bars"></i>
-    </a>
   </div>
 
   <nav>
@@ -35,4 +31,8 @@
       </li>
     </ul>
   </nav>
+  <button
+    class="float-right bg-transparent hover:bg-red-500 text-red-600 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
+    Log Out
+  </button>
 </header>
