--- a/my-recipe-app/src/app/components/signup/signup.component.html
+++ b/my-recipe-app/src/app/components/signup/signup.component.html
@@ -14,7 +14,7 @@
         <div class="form-group">
             <label class="block text-grey-darker text-sm font-bold mb-2" for="name">Name:</label>
             <input class="form-control shadow appearance-none border rounded w-96 py-2 px-3 text-grey-darker"
-                type="text" placeholder="John Doe" formControlName="name" required />
+                type="text" placeholder="Jane Doe" formControlName="name" required />
         </div>
         <div class="form-group">
             <label class="block text-grey-darker text-sm font-bold mb-2" for="email">Email address:</label>
@@ -37,7 +37,7 @@
                 class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">Sign
                 Up</button>
             <div class="register-button-wrapper">
-                <button routerLink="/"
+                <button type="button" routerLink="/"
                     class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">Back</button>
             </div>
         </div>
