--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -1,7 +1,8 @@
 <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
     <h1 class="text-xl pb-2">All Recipes:</h1>
     <div class="filter-wrapper">
-        <p class="italic">Looking for something specific? Filter through meals by selecting a type followed your diet
+        <p class="italic">Looking for something specific? Filter through meals by selecting a type followed your diet by
+            your
             preferences
         </p>
         <div class="filter-list">
@@ -61,7 +62,7 @@
                             <div class="recipe-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs shadow-xl">
                                 <a routerLink="/detail/{{recipe.id}}">
                                     <h2 class="text-xl pb-2">{{recipe.title}}</h2>
-                                    <img class="rounded-lg" src="{{recipe.image}}" alt="">
+                                    <img class="rounded-lg" src="{{recipe.image}}" alt="An image of {{recipe.title}}">
                                 </a>
                                 <ul class="recipe-info-list">
                                     <li class="recipe-servings pt-2"><span class="font-bold">Servings:
