--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -1,5 +1,9 @@
 <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
-    <h1>Welcome back <br><span class="text-3xl">Dynamic User</span></h1>
+    <app-user-profile></app-user-profile>
+    <button class="mt-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border
+        border-green-500 hover:border-transparent rounded">
+        New List
+    </button>
     <h2 class="text-xl mt-2">Your saved recipes:</h2>
     <section class="savedRecipes">
         <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
