--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -4,7 +4,7 @@
         border-green-500 hover:border-transparent rounded">
         New List
     </button>
-    <h2 class="text-xl mt-2">Your saved recipes:</h2>
+    <h2 class="text-xl mt-2">Your recipe lists:</h2>
     <section class="savedRecipes">
         <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
         <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
