--- a/my-recipe-app/src/app/components/landingpage/landingpage.component.html
+++ b/my-recipe-app/src/app/components/landingpage/landingpage.component.html
@@ -11,7 +11,7 @@ C/O https://placeholder.com/" alt="">
             Sign Up
         </button>
         <p>- or -</p>
-        <button routerLink="/signin"
+        <button routerLink="/login"
             class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
             Log In
         </button>
