--- a/my-recipe-app/src/app/components/landingpage/landingpage.component.html
+++ b/my-recipe-app/src/app/components/landingpage/landingpage.component.html
@@ -1,7 +1,5 @@
 <div class="landing-wrapper space-y-3 text-center">
-    <img class="mx-auto" src="https://via.placeholder.com/350x150
-
-C/O https://placeholder.com/" alt="">
+    <img class="mx-auto" src="../../../assets/OnlyRecipes.png" alt="OnlyRecipes Logo" title="OnlyRecipes Logo">
     <p>
         Sign up to make good food and interact with your recipes
     </p>
