--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -2,11 +2,9 @@
   class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4 text-center lg:text-right">
 
   <div class="flex items-center justify-between mb-4 md:mb-0 ">
-    <h1 class="leading-none text-2xl text-grey-darkest text-center">
-      <a class="no-underline text-grey-darkest hover:text-black" routerLink="/start">
-        Angular Recipe App
-      </a>
-    </h1>
+    <a routerLink="/start">
+      <img class="mx-auto w-36" src="../../../assets/OnlyRecipes.png" alt="OnlyRecipes Logo" title="OnlyRecipes Logo" />
+    </a>
   </div>
 
   <nav>
