add modal component

--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -91,6 +91,8 @@
                                         </span>
                                     </button>
                                 </div>
+                                <button (click)="openModal">Modal</button>
+                                <!-- <app-modal></app-modal> -->
                             </div>
                         </li>
                     </ul>
