add popup funciotnality for modal

--- a/my-recipe-app/src/app/app.component.html
+++ b/my-recipe-app/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main class="p-10 lg:mx-52">
     <router-outlet></router-outlet>
+    <app-modal></app-modal>
 </main>
 <app-footer></app-footer>
