--- a/my-recipe-app/src/app/components/user-profile/user-profile.component.html
+++ b/my-recipe-app/src/app/components/user-profile/user-profile.component.html
@@ -1,1 +1,2 @@
-<h1>Welcome back <br><span class="text-3xl">{{ UserProfile.name }}</span></h1>
+<h1>Welcome back <br><span class="text-3xl">{{ user?.name }}</span></h1>
+<!-- add "loading" type of text for async wait time -->
