--- a/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipe-detail/recipe-detail.component.html
@@ -12,7 +12,7 @@
         </ng-container>
         <ng-template #showSave>
             <div>
-                <button id="{{recipe.id}}" (click)="savedRecipeService.saveRecipe(recipe)"
+                <button id="{{recipe.id}}" (click)="save(recipe)"
                     class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                     Save
                 </button>
@@ -20,7 +20,7 @@
         </ng-template>
         <ng-template #showRemove>
             <div>
-                <button id="{{recipe.id}}" (click)="savedRecipeService.deleteRecipe(recipe)"
+                <button id="{{recipe.id}}" (click)="save(recipe)"
                     class="clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white py-1 px-2 border border-red-500 hover:border-transparent rounded">
                     Remove
                 </button>
