--- a/my-recipe-app/src/app/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/recipes/recipes.component.html
@@ -80,7 +80,7 @@
                                     <li class="recipe-time"><span class="font-bold">Vegan: </span>{{recipe.vegan}}
                                     </li>
                                 </ul>
-                                <div>
+                                <!-- <div>
                                     <button id="{{recipe.id}}" (click)="savedRecipeService.toggleFavorite(recipe)"
                                         class="clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded">
                                         <span *ngIf="recipe.favorite">
@@ -90,7 +90,7 @@
                                             Save
                                         </span>
                                     </button>
-                                </div>
+                                </div> -->
                                 <!-- <button (click)="openModal">Modal</button> -->
                             </div>
                         </li>
