--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -1,10 +1,9 @@
 <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
     <app-user-profile></app-user-profile>
-    <button class="mt-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border
-        border-green-500 hover:border-transparent rounded">
-        New List
-    </button>
+    <app-new-list></app-new-list>
+
     <h2 class="text-xl mt-2">Your recipe lists:</h2>
+    <!-- <p *ngFor="let list of lists">{{ list_title }}</p> -->
     <section class="savedRecipes">
         <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
         <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
