--- a/my-recipe-app/src/app/components/modal/modal.component.html
+++ b/my-recipe-app/src/app/components/modal/modal.component.html
@@ -31,18 +31,20 @@
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white border-red-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Cancel
                     </button>
-                    <button (click)="onClose()" type="button"
+                    <button (click)="onClose()" type="button" [disabled]='currentList==null'
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white border-green-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Save
                     </button>
                 </div>
                 <div class="modalSelectorContainer ">
-                    <select class="p-2 rounded" name="cars" id="cars">
-                        <option value="volvo">List 1</option>
-                        <option value="saab">List 2</option>
-                        <option value="mercedes">List 3</option>
-                        <option value="audi">List 4</option>
-                    </select>
+                    <div *ngIf="lists!=null; ">
+                        <select [(ngModel)]="currentList" (change)="handleSelect()">
+                            <option *ngFor="let list of lists" [ngValue]="list">{{ list.list_title }}</option>
+                        </select>
+                    </div>
+                    <div *ngIf="lists==null;">
+                        Loading...
+                    </div>
                 </div>
             </div>
         </div>
