--- a/my-recipe-app/src/app/components/new-list/new-list.component.html
+++ b/my-recipe-app/src/app/components/new-list/new-list.component.html
@@ -2,9 +2,9 @@
 <form>
     <div>
         <label for="newList">Create new list: </label><br>
-        <input type="text" name="list_title" id="list_title" placeholder="List Name" required>
+        <input type="text" [(ngModel)]="listName" name="listName" id="listName" placeholder="List Name" required>
     </div>
-    <button (click)="handleCreateList(title)" type="submit" class="mt-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border
+    <button (click)="handleCreateList(listName)" type="submit" class="mt-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border
             border-green-500 hover:border-transparent rounded">
         Create
     </button>
