--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -3,7 +3,7 @@
     <app-new-list></app-new-list>
 
     <h2 class="text-xl mt-2">Your recipe lists:</h2>
-    <!-- <p *ngFor="let list of lists">{{ list_title }}</p> -->
+    <p *ngFor="let list of lists">{{ list.list_title }}</p>
     <section class="savedRecipes">
         <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
         <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
