--- a/my-recipe-app/src/app/components/modal/modal.component.html
+++ b/my-recipe-app/src/app/components/modal/modal.component.html
@@ -31,7 +31,7 @@
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white border-red-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Cancel
                     </button>
-                    <button (click)="addRecipe(currentList)" type="button" [disabled]='currentList==null'
+                    <button (click)="handleAddRecipe(currentList, recipe)" type="button" [disabled]='currentList==null'
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white border-green-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Save
                     </button>
