--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -3,7 +3,15 @@
     <app-new-list></app-new-list>
 
     <h2 class="text-xl mt-2">Your recipe lists:</h2>
-    <p *ngFor="let list of lists">{{ list.list_title }}</p>
+    <div class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
+        <div *ngFor="let list of lists" class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
+            <p class="text-xl font-bold">{{ list.list_title }}</p>
+            <ul>
+                <li><a routerLink="#">Recipe 1</a></li>
+                <li><a routerLink="#">Recipe 2</a></li>
+            </ul>
+        </div>
+    </div>
     <section class="savedRecipes">
         <!-- <div *ngIf="savedRecipeService.savedRecipeCheck; else showNoSavedRecipes"> -->
         <div class="allRecipes-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
