--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -4,11 +4,17 @@
 
     <h2 class="text-xl mt-2">Your recipe lists:</h2>
     <div class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
+        <div>
+            <p>Test</p>
+            <div *ngFor="let result of results"> {{ result.title }}</div>
+        </div>
         <div *ngFor="let list of lists" class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
             <p class="text-xl font-bold">{{ list.list_title }}</p>
+            <p class="text-xl font-bold">{{ list.id }}</p>
             <ul>
                 <li><a routerLink="#">Recipe 1</a></li>
                 <li><a routerLink="#">Recipe 2</a></li>
+                <!-- <li *ngFor="let recipe_id of recipe_ids"><a routerLink="#">{{ spoonId.recipe_id }}</a></li> -->
             </ul>
         </div>
     </div>
