--- a/my-recipe-app/src/app/components/show-recipes/show-recipes.component.html
+++ b/my-recipe-app/src/app/components/show-recipes/show-recipes.component.html
@@ -3,6 +3,9 @@
     class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
     <div class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
         <p class="text-xl">Your saved recipes in this list:</p>
+        <!-- <ul *ngFor="let listRecipe of listRecipes">
+            <li>{{listRecipes.title}}</li>
+        </ul> -->
         <!-- <p class="text-xl font-bold"><a routerLink="/detail/000000">{{ list.id }}: {{ list.list_title }}</a></p> -->
         <!-- <p class="text-xl font-bold"><a routerLink="/detail/000000">{{listRecipes.title}}</a></p> -->
         <p class="text-xl font-bold"><a routerLink="/detail/000000">Recipe 2</a>
@@ -12,7 +15,7 @@
             <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
         </p>
     </div>
-    {{listRecipes.title}}
+
     <!-- {{savedRecipes.title}} -->
     <!-- *ngFor="let recipe of listRecipes" -->
 </div>
