--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -6,7 +6,8 @@
     <div *ngIf="lists!=null;"
         class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
         <div *ngFor="let list of lists" class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
-            <p class="text-xl font-bold"><a routerLink="/list/{{list.id}}">{{ list.id }}:
+            <p class="text-xl font-bold"><a routerLink="/list/{{list.id}}" (click)="handleListClick(list.id)">{{ list.id
+                    }}:
                     {{
                     list.list_title }}</a>
                 <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
