--- a/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
+++ b/my-recipe-app/src/app/saved-recipe/saved-recipe.component.html
@@ -1,21 +1,20 @@
 <div class="bg-gray-100 my-2 p-2 border rounded-lg min-w-min shadow-xl">
     <app-user-profile></app-user-profile>
-    <app-new-list></app-new-list>
+    <app-new-list (handleIsLoading)="setIsLoading()" (createdList)="handleGetLists()"></app-new-list>
 
     <h2 class="text-xl mt-2">Your recipe lists:</h2>
-    <div *ngIf="lists!=null;"
-        class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
+    <div *ngIf="!isLoading" class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
         <div *ngFor="let list of lists" class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
-            <p class="text-xl font-bold"><a routerLink="/list/{{list.id}}" (click)="handleListClick(list.id)">{{ list.id
+            <p class="text-xl font-bold"><a routerLink="/list/{{list.id}}">{{ list.id
                     }}:
                     {{
                     list.list_title }}</a>
-                <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
+                <fa-icon (click)="deleteList(list.id)" [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
             </p>
             <p class="text-xl">This list contains {{ list.id }} items</p>
         </div>
     </div>
-    <div *ngIf="lists==null;">
+    <div *ngIf="isLoading">
         Loading...
     </div>
     <section class="savedRecipes">
