--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
       <li class="md:ml-4">
         <a class="border-t block no-underline hover:underline py-2 text-grey-darkest hover:text-black md:border-none md:p-0"
           routerLink="/saved-recipes">
-          Saved Recipes
+          My Lists
         </a>
       </li>
     </ul>
