show update modal on click

--- a/my-recipe-app/src/app/app.component.html
+++ b/my-recipe-app/src/app/app.component.html
@@ -2,5 +2,6 @@
 <main class="p-10 lg:mx-52">
     <router-outlet></router-outlet>
     <app-modal></app-modal>
+    <app-edit-modal></app-edit-modal>
 </main>
 <app-footer></app-footer>
