--- a/my-recipe-app/src/app/components/edit-modal/edit-modal.component.html
+++ b/my-recipe-app/src/app/components/edit-modal/edit-modal.component.html
@@ -10,7 +10,7 @@
                 <div class="sm:flex sm:items-start">
                     <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                            Edit List Title
+                            Editing list DYNAMIC LIST TITLE
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm">
@@ -27,31 +27,17 @@
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-red-500 text-red-700 font-semibold hover:text-white border-red-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Cancel
                     </button>
-                    <button (click)="handleEditList(currentList, title)" type="button" [disabled]='currentList==null'
+                    <button (click)="handleEditList(listTitle)" type="button"
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white border-green-500 hover:border-transparent sm:ml-3 sm:w-auto sm:text-sm">
                         Update
                     </button>
                 </div>
-                <!-- <div class="modalSelectorContainer ">
-                    <div *ngIf="lists!=null; ">
-                        <select [(ngModel)]="currentList">
-                            <option *ngFor="let list of lists" [ngValue]="list.id">{{ list.list_title }}</option>
-                        </select>
-                    </div>
-                    <div *ngIf="lists==null;">
-                        Loading...
-                    </div>
-                </div> -->
                 <div class="editModalForm">
                     <form>
                         <div>
-                            <input type="text" [(ngModel)]="listName" name="listName" id="listName"
+                            <input type="text" [(ngModel)]="listTitle" name="listTitle" id="listTitle"
                                 placeholder="New list title" required>
                         </div>
-                        <!-- <button (click)="handleEditList(listName)" type="submit" class="mt-2 clear bg-transparent hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border
-                                border-green-500 hover:border-transparent rounded">
-                            Save
-                        </button> -->
                     </form>
                 </div>
             </div>
