--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header
+<header *ngIf="isSignedIn"
   class="border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4 text-center lg:text-right">
 
   <div class="flex items-center justify-between mb-4 md:mb-0 ">
