--- a/my-recipe-app/src/app/components/show-recipes/show-recipes.component.html
+++ b/my-recipe-app/src/app/components/show-recipes/show-recipes.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-xl mt-2">Name of list:</h2>
+<h2 class="text-xl mt-2"></h2>
 <div *ngIf="listRecipes!=null;"
     class="list-card-wrapper grid grid-cols-1 grid-rows-1 lg:grid-cols-4 lg:grid-rows-2 gap-2">
     <div class="list-card bg-blue-200 my-2 p-2 border rounded-lg max-w-xs">
@@ -8,12 +8,6 @@
                     [icon]="faTimes"></fa-icon>
             </li>
         </ul>
-        <p class="text-xl font-bold"><a routerLink="/detail/000000">Recipe 2</a>
-            <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
-        </p>
-        <p class="text-xl font-bold"><a routerLink="/detail/000000">Recipe 3</a>
-            <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
-        </p>
     </div>
 </div>
 <div *ngIf="listRecipes==null;">
