--- a/my-recipe-app/src/app/components/signup/signup.component.html
+++ b/my-recipe-app/src/app/components/signup/signup.component.html
@@ -1,4 +1,5 @@
 <div class="auth-wrapper space-y-3 pb-3">
+    <img class="mx-auto" src="../../../assets/OnlyRecipes.png" alt="OnlyRecipes Logo" title="OnlyRecipes Logo">
     <form class="form-signin text-center space-y-3" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <!-- Errors -->
         <div class="text-red-500" *ngIf="errors?.email">
